<resources>
    <string name="app_name">NavMenuDrawer_Kotlin</string>
    <string name="my_profile">My Profile</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="content_details">Content Details</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>

    <string name="open_msg" />
    <string name="closing_msg" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile_fragment">My Profile Fragment</string>
    <string name="content_details_fragment">Content Details Fragment</string>
    <string name="table_of_contents_fragments">Table of Contents Fragments</string>
    <string name="update_profile_fragment">Update Profile Fragment</string>


</resources>
